WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226450
Fix thread safety issues in OscillatorNode
https://bugs.webkit.org/show_bug.cgi?id=226450
Summary
Fix thread safety issues in OscillatorNode
Chris Dumez
Reported
2021-05-30 20:56:50 PDT
Adopt thread safety annotations in OscillatorNode and fix bugs found by clang.
Attachments
Patch
(5.51 KB, patch)
2021-05-30 21:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-05-30 21:09:10 PDT
Created
attachment 430172
[details]
Patch
EWS
Comment 2
2021-05-31 17:03:43 PDT
Committed
r278285
(
238322@main
): <
https://commits.webkit.org/238322@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430172
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-05-31 17:04:37 PDT
<
rdar://problem/78695286
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug