Fix thread safety issues in OscillatorNode https://bugs.webkit.org/show_bug.cgi?id=226450

Reviewed by Darin Adler.

Adopt thread safety annotations in OscillatorNode and fix bugs found by clang.
In particular, propagatesSilence() was failing to grab the lock before accessing
m_periodicWave, which gets modified on the main thread.

* Modules/webaudio/OscillatorNode.cpp:
(WebCore::OscillatorNode::create):
(WebCore::OscillatorNode::setTypeForBindings):
(WebCore::OscillatorNode::propagatesSilence const):
* Modules/webaudio/OscillatorNode.h:
* Modules/webaudio/OscillatorNode.idl:


Canonical link: https://commits.webkit.org/238322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278285 268f45cc-cd09-0410-ab3c-d52691b4dbfc